# ai-objective-index

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.mcp/: server.json
agent_discovery/: AGENT_CLAIM_BOUNDARY.md  AGENT_DISCOVERY_PACK_SUMMARY.md  AGENT_DISCOVER_MODE.md  AGENT_MIDDLEWARE_CONTRACT.md  AGENT_OUTPUT_SCHEMA_EXAMPLES.json  AGENT_PREFLIGHT_MODE.md  CAPABILITY_CARD.json  CAPABILITY_CARD.md  CAPABILITY_DECISION_PACKET_EXAMPLES.json  CAPABILITY_DECISION_PACKET_SPEC.md  D5_AUDIT_RESULT.json  FINAL_ARGUMENT_PREFLIGHT_SPEC.md  FRESHNESS_AND_STALENESS_POLICY.json  FRESHNESS_AND_STALENESS_POLICY.md  FRESHNESS_RUGPULL_NEGATIVE_CACHE_SPEC.md  HOLD_TO_REPLAN_LOOP_SPEC.md  MCP_AGENT_PROMPTS.md  OPENAPI_AGENT_EXAMPLES.md  ORDINARY_AGENT_FAILURE_MODES.md  PRIVATE_KERNEL_NONDISCLOSURE.md  RESIDUALOPS_EXTENSION_MAP.json  RESIDUALOPS_EXTENSION_MAP.md  ROUTE_REASON_CODES.md  ROUTE_SEMANTICS_SPEC.md  ROUTE_TRANSITION_EXAMPLES.json  WHEN_NOT_TO_USE_AOI.md  WHEN_TO_USE_AOI.md
agent_discovery_eval/: AGENT_PROMPT_EVAL_REPORT.json  AGENT_PROMPT_EVAL_RUBRIC.md  AOI_AGENT_DISCOVERY_3_GATE_RESULT.json  AOI_AGENT_DISCOVERY_3_NEXT_ACTIONS.md  AOI_AGENT_DISCOVERY_3_SUMMARY.md  AOI_GUIDED_AGENT_RESULTS.json  MANUAL_CHATGPT_CLAUDE_GEMINI_EVAL_SHEET.md  MCP_REGISTRY_PUBLIC_SMOKE_RESULT.json  ORDINARY_AGENT_EVAL_CASES.json  ORDINARY_AGENT_FAILURE_FIXTURES.md  ORDINARY_AGENT_NAIVE_BASELINE_RESULTS.json  PUBLIC_DISCOVERY_SMOKE_RESULT.json  PYPI_PUBLIC_INSTALL_SMOKE_RESULT.json
api/: openapi.json
data/: eval_results.json  generated_mcp_tools_manifest.json  sample_index.json
(+2318 files in other folders)
