[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-objective-index"
version = "0.3.0a2"
description = "Read-only objective-fit ranking contracts and core engine for AI tools, APIs, SaaS products, and MCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
mcp = [
  "mcp"
]

[project.scripts]
ai-objective-index-mcp = "ai_objective_index.mcp_stdio_entrypoint:main"
ai-objective-index-mcp-smoke = "ai_objective_index.mcp_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
